[gd_scene load_steps=3 format=3 uid="uid://dgupp2doqjm1a"]

[ext_resource type="Script" uid="uid://c2b40edm6x7dc" path="res://inspector/inspector_panel.gd" id="1_ye7ip"]
[ext_resource type="Script" uid="uid://cyfyvtcdjamr3" path="res://gui/chart.gd" id="2_rgco1"]

[node name="InspectorPanel" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1280.0
offset_right = -912.0
offset_bottom = 400.0
grow_horizontal = 0
size_flags_horizontal = 10
size_flags_vertical = 2
theme_type_variation = &"CanvasPrompt"
script = ExtResource("1_ye7ip")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="InspectorTitle" type="Label" parent="MarginContainer/MainContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"InspectorTitle"
text = "(empty inspector)"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="InspectorSubtitle" type="Label" parent="MarginContainer/MainContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"InspectorSubtitle"
text = "(subtitle)"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
current_tab = 0
clip_tabs = false
use_hidden_tabs_for_min_size = true
tab_focus_mode = 0

[node name="Overview" type="PanelContainer" parent="MarginContainer/MainContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/TabContainer/Overview"]
layout_mode = 2

[node name="Chart" type="Control" parent="MarginContainer/MainContainer/TabContainer/Overview/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
script = ExtResource("2_rgco1")
metadata/_custom_type_script = "uid://cyfyvtcdjamr3"

[node name="PrimaryAttributeLabel" type="Label" parent="MarginContainer/MainContainer/TabContainer/Overview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Settings" type="PanelContainer" parent="MarginContainer/MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="TraitsContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/TabContainer/Settings"]
unique_name_in_owner = true
layout_mode = 2
